Fixed unwanted mobile behaviors
- Fixed being able to scroll left revealing whitespace
- Fixed nav being pushed partly off screen when scrolling up

--- a/src/style.css
+++ b/src/style.css
@@ -24,8 +24,6 @@ h6 {
 }
 
 #content {
-  display: flex;
-  flex-direction: column;
 }
 
 .line-break-small {
@@ -57,8 +55,7 @@ h6 {
 }
 
 .nav > .nav-links {
-  display: inline;
-  float: right;
+  display: flex;
   text-decoration: none;
   font-size: 2rem;
   font-weight: 300;
@@ -116,8 +113,9 @@ h6 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0px 16px;
 
-  padding: 128px 24px;
+  padding: 128px 0px;
 }
 
 .about-title {
@@ -128,7 +126,6 @@ h6 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 48px;
   gap: 96px;
 }
 
